templates/redisInstance.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.cacheName 
  namespace: #@ data.values.serviceNamespace
  labels:
    app: hungryman
    service: #@ data.values.cacheName 
spec:
  ports:
    - port: 6379
      name: redis
  selector:
    app: hungryman
    service: #@ data.values.cacheName 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.cacheName
  namespace: #@ data.values.serviceNamespace
  labels:
    app: hungryman
    service: #@ data.values.cacheName 
spec:
  selector:
    matchLabels:
      app: hungryman  
      service: #@ data.values.cacheName 
  replicas: 1
  template:
    metadata:
      labels:
        app: hungryman  
        service: #@ data.values.cacheName 
    spec:
      containers:
        - name: redis
          image: bitnami/redis
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
          ports:
            - name: redis
              containerPort: 6379
              protocol: "TCP"
          volumeMounts:
            - mountPath: /var/lib/redis
              name: redis-data

      volumes:
        - name: redis-data
          emptyDir: {}
